deployments/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gitops-example
  name: gitops-example
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: gitops-example
