deployments/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitops-example
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: default.127.0.0.1.nip.io
      http:
        paths:
          - backend:
              service:
                name: gitops-example
                port:
                  number: 80
            path: /
            pathType: Prefix
